fix urls for gh-pages

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     </header>
     <main>
         <p>
-            <a href="/src/mobile.blade.html">For mobile "app"</a>
+            <a href="src/mobile.blade.html">For mobile "app"</a>
         </p>
         <p>
-            <a href="/src/web.blade.html">For web page</a>
+            <a href="src/web.blade.html">For web page</a>
         </p>
     </main>
 </body>
