--- a/src/mobile.blade.html
+++ b/src/mobile.blade.html
@@ -22,7 +22,9 @@
 
   <title>Investments</title>
   <meta charset="UTF-8">
-  <script src="{{ $script_link }}" id="fa-invest-now-launcher"></script>
+  <!-- <script src="{{ $script_link }}" id="fa-invest-now-launcher"></script> -->
+  <!-- <script src="https://my-sandbox.fundamerica.com/widgets/invest_now.min.js" id="fa-invest-now-launcher"></script> -->
+  <script src="https://my.fundamerica.com/widgets/invest_now.min.js" id="fa-invest-now-launcher"></script>
 
   <style type="text/css">
     body {
@@ -329,12 +331,21 @@
   <!-- End Google Tag Manager (noscript) -->
 
 <div class="button-container">
-  <button
-      type="button"
-      data-fa-invest-now="{{ $tier->offer_id }}"
-      data-fa-invest-now-data='{"tierId":"{{ $tier->id }}","userId":"{{ $user->id }}"}'
-      class="fa-invest-now-btn fa-invest-now-btn-4"
-      id="invest-now-button">
+    <!-- uncomment here if working code -->
+    <!-- <button
+        type="button"
+        data-fa-invest-now="{{ $tier->offer_id }}"
+        data-fa-invest-now-data='{"tierId":"{{ $tier->id }}","userId":"{{ $user->id }}"}'
+        class="fa-invest-now-btn fa-invest-now-btn-4"
+        id="invest-now-button"> -->
+
+    <!-- uncomment here if prod code demo -->
+    <button 
+        type="button" 
+        data-fa-invest-now="ERoYqO68NO84Dx5nDn3Az6M-kzwyETU6:7w8_bf7KSbOaFVS6YsZCSw"
+        data-fa-invest-now-data="" class="fa-invest-now-btn fa-invest-now-btn-4"
+        id="invest-now-button"
+    >
     Invest Now
   </button>
 </div>
