--- a/src/web.blade.html
+++ b/src/web.blade.html
@@ -22,7 +22,9 @@
   <title>Investments</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-     <script src="{{ $script_link }}" id="fa-invest-now-launcher"></script>
+      <!-- <script src="{{ $script_link }}" id="fa-invest-now-launcher"></script> -->
+      <!-- <script src="https://my-sandbox.fundamerica.com/widgets/invest_now.min.js" id="fa-invest-now-launcher"></script> -->
+      <script src="https://my.fundamerica.com/widgets/invest_now.min.js" id="fa-invest-now-launcher"></script>
   <style type="text/css">
     body {
       background-color: black;
@@ -470,12 +472,21 @@
 <body>
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5C5J96H" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="button-container">
-    <button
+    <!-- uncomment here if working code -->
+    <!-- <button
         type="button"
         data-fa-invest-now="{{ $tier->offer_id }}"
         data-fa-invest-now-data='{"tierId":"{{ $tier->id }}","userId":"{{ $user->id }}"}'
         class="fa-invest-now-btn fa-invest-now-btn-4"
-        id="invest-now-button">
+        id="invest-now-button"> -->
+
+    <!-- uncomment here if prod code demo -->
+    <button 
+        type="button" 
+        data-fa-invest-now="ERoYqO68NO84Dx5nDn3Az6M-kzwyETU6:7w8_bf7KSbOaFVS6YsZCSw"
+        data-fa-invest-now-data="" class="fa-invest-now-btn fa-invest-now-btn-4"
+        id="invest-now-button"
+    >
       Invest Now
     </button>
   </div>
