force width for mobile phones

--- a/src/mobile.blade.html
+++ b/src/mobile.blade.html
@@ -31,6 +31,14 @@
       background-color: black;
     }
 
+    form-field holder {
+      width: 100% !important;
+    }
+
+    .modal-dialog {
+      width: auto !important;
+    }
+
     .button-container {
       margin-top: 50px;
       width: 1px;
