--- a/src/web.blade.html
+++ b/src/web.blade.html
@@ -33,7 +33,7 @@
       width: 100% !important;
     }
     .modal-dialog {
-      width: auto;
+      width: auto !important;
     }
     
     .button-container {
