text color: white

--- a/src/mobile.blade.html
+++ b/src/mobile.blade.html
@@ -39,6 +39,10 @@
       width: auto !important;
     }
 
+    #fa-invest-now-modal.classic{
+      color:white;  
+    }
+
     .button-container {
       margin-top: 50px;
       width: 1px;
