--- a/src/web.blade.html
+++ b/src/web.blade.html
@@ -35,6 +35,9 @@
     .modal-dialog {
       width: auto !important;
     }
+    #fa-invest-now-modal.classic{
+      color:white;  
+    }
     
     .button-container {
       margin-top: 50px;
