text color: white

--- a/src/web.blade.html
+++ b/src/web.blade.html
@@ -29,16 +29,19 @@
     body {
       background-color: black;
     }
+
     form-field holder {
       width: 100% !important;
     }
+
     .modal-dialog {
       width: auto !important;
     }
+
     #fa-invest-now-modal.classic{
-      color:white;  
+      color:white !important;
     }
-    
+
     .button-container {
       margin-top: 50px;
       width: 1px;
