hide progressBar on Finish

--- a/src/mobile.blade.html
+++ b/src/mobile.blade.html
@@ -162,6 +162,11 @@
         progressBar.style.backgroundColor = '#D4AB72';
         progressBar.style.color = "#000";
       }
+
+      if (progressBar?.attributes?.['ng-aria-valuenow']?.value === '100') {
+        hideButton(document.querySelector('.progress'));
+      }
+
       if (popover) {
         popover.style.backgroundColor = '#D4AB72';
       }
