not hide "close" button on mobile

--- a/src/mobile.blade.html
+++ b/src/mobile.blade.html
@@ -193,9 +193,9 @@
         hideButton(oldClear);
         originClear = oldClear;
       }
-      if (oldClose && !oldClose.classList.contains('hide-button')) {
-        hideButton(oldClose);
-      }
+      // if (oldClose && !oldClose.classList.contains('hide-button')) {
+      //   hideButton(oldClose);
+      // }
     }
 
     function findAngularModal() {
